argocd/user-apps/elasticsearch/elasticsearch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elasticsearch-ingress
  annotations:
    nginx.ingress.kubernetes.io/service-upstream: "true"
    argocd.argoproj.io/sync-wave: "5"
spec:
  ingressClassName: nginx
  rules:
  - host: nginx.elasticsearch.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: elastic-linkerd-es-http
            port:
              number: 9200
